--- a/templates/index.html
+++ b/templates/index.html
@@ -264,7 +264,7 @@ border-radius: 15px;
 <script src="{{ url_for('static', filename='assets/notify.min.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-zoom/2.0.1/chartjs-plugin-zoom.min.js" integrity="sha512-wUYbRPLV5zs6IqvWd88HIqZU/b8TBx+I8LEioQ/UC0t5EMCLApqhIAnUg7EsAzdbhhdgW07TqYDdH3QEXRcPOQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 <script type="text/javascript">
 
 sgName = ""
@@ -321,10 +321,6 @@ $("#searchByUser").on("input", function(){
       }
       */
     });
-
-
-
-
 
 
   $("#resetFilters").click(function(e){
@@ -398,12 +394,16 @@ $('#dtTo').dateRangePicker(dtConfig);
 function sgDbListGet(){
   $('#sgDbListOptions').empty()
   var data1 = {}
-  data1['startDt'] = $('#dtFrom').val();
-  data1['endDt'] = $('#dtTo').val();
+  var to = $('#dtTo').val();
+  var from = $('#dtFrom').val();
+  data1['startDt'] = from
+  data1['endDt'] = to
+  data1["startDtEpoch"] = Math.floor(new Date(from).getTime() / 1000)
+  data1["endDtEpoch"] = Math.floor(new Date(to).getTime() / 1000)
 
     $.ajax({
       type: 'POST',
-      url: '/sgDbList',
+      url: '/sgDbListEpoch',
       data: JSON.stringify(data1),
       dataType: 'json',
       contentType:'application/json; charset=utf-8',
@@ -426,10 +426,16 @@ function sgDbListGet(){
 
 function sgUserList(){
   $('#sgUserListSelect').empty()
+
+  var from = $('#dtFrom').val();
+  var to = $('#dtTo').val();
+    
   var data1 = {}
   data1["sgDb"] = $('#sgDbListOptions').val()
-  data1['startDt'] = $('#dtFrom').val();
-  data1['endDt'] = $('#dtTo').val();
+  data1['startDt'] = from
+  data1['endDt'] = to
+  data1["startDtEpoch"] = Math.floor(new Date(from).getTime() / 1000)
+  data1["endDtEpoch"] = Math.floor(new Date(to).getTime() / 1000)
   data1['sortBy'] = $('input[name="userSort"]:checked').val();
 
   data1["syncResult"] = $("#syncResult").val();
@@ -446,7 +452,7 @@ function sgUserList(){
 
   $.ajax({
     type: 'POST',
-    url: '/sgUserList',
+    url: '/sgUserListEpoch',
     data: JSON.stringify(data1),
     dataType: 'json',
     contentType:'application/json; charset=utf-8',
@@ -474,6 +480,8 @@ function sgUserList(){
     var data1 = {}
     data1['startDt'] = from
     data1['endDt'] = to
+    data1["startDtEpoch"] = Math.floor(new Date(from).getTime() / 1000)
+    data1["endDtEpoch"] = Math.floor(new Date(to).getTime() / 1000)
     if($('#searchByUser').val() !== ""){
       data1["viewBy"] = ""
     }else{
@@ -482,7 +490,7 @@ function sgUserList(){
 
     $.ajax({
         type: 'POST',
-        url: '/dateRangeSgErrors',
+        url: '/dateRangeSgErrorsEpoch',
         data: JSON.stringify(data1),
         dataType: 'json',
         contentType:'application/json; charset=utf-8',
@@ -496,6 +504,10 @@ function sgUserList(){
 
   function addIntoMainChart(data2){
 
+    if(data2 == []){
+      return
+    }
+
     var valuesErrorCount = []
 
     var newDataset =   {
@@ -505,10 +517,11 @@ function sgUserList(){
       data:[]
     }
 
+
     $.each(data2, function(key, value) {  
         var tErrors = value.query + value.dcp + value.import
-        var gTime = value.dt.substring(11)
-        newDataset.data.push([gTime,tErrors])
+        var gTime = value.dt
+        newDataset.data.push({x:gTime,y:tErrors})
         });
       
     c1.config.data.datasets.push(newDataset);
@@ -536,6 +549,8 @@ function sgUserList(){
     data1["sgDb"] = $('#sgDbListOptions').val()
     data1['startDt'] = from
     data1['endDt'] = to
+    data1["startDtEpoch"] = Math.floor(new Date(from).getTime() / 1000)
+    data1["endDtEpoch"] = Math.floor(new Date(to).getTime() / 1000)
     data1["user"] = $('#searchByUser').val()
     data1["syncResult"] = $("#syncResult").val();
     data1["changeCount"] = $('#changeCount').val()
@@ -557,7 +572,7 @@ function sgUserList(){
 
       $.ajax({
         type: 'POST',
-        url: '/dateRange',
+        url: '/dateRangeEpoch',
         data: JSON.stringify(data1),
         dataType: 'json',
         contentType:'application/json; charset=utf-8',
@@ -568,7 +583,7 @@ function sgUserList(){
 
     $.ajax({
         type: 'POST',
-        url: '/dtDiffSecStats',
+        url: '/dtDiffSecStatsEpoch',
         data: JSON.stringify(data1),
         dataType: 'json',
         contentType:'application/json; charset=utf-8',
@@ -597,6 +612,8 @@ function bigSearchPie(){
     data1["sgDb"] = $('#sgDbListOptions').val()
     data1['startDt'] = from
     data1['endDt'] = to
+    data1["startDtEpoch"] = Math.floor(new Date(from).getTime() / 1000)
+    data1["endDtEpoch"] = Math.floor(new Date(to).getTime() / 1000)
     data1["user"] = $('#searchByUser').val()
     data1["syncResult"] = $("#syncResult").val();
     data1["changeCount"] = $('#changeCount').val()
@@ -614,7 +631,7 @@ function bigSearchPie(){
 
     $.ajax({
         type: 'POST',
-        url: '/dateRange',
+        url: '/dateRangeEpoch',
         data: JSON.stringify(data1),
         dataType: 'json',
         contentType:'application/json; charset=utf-8',
@@ -698,9 +715,6 @@ function makeChart(data){
  var ctx1 = document.getElementById('myChart1');
  var ctx2 = document.getElementById('myChart2');
 
-
-
-
   var valuesChangesCache = [];
   var valuesChangesQuery = [];
   var valuesSyncTime = [];
@@ -719,32 +733,29 @@ function makeChart(data){
   var countErrors = 0
   var countConflicts = 0
 
-  var tFrom = new Date( $("#dtFrom").val());
-  var xAxisStart = Math.floor(tFrom.getTime() / 1000);
-
-  var tTo= new Date( $("#dtTo").val())
-  var xAxisEnd =  Math.floor(tTo.getTime() / 1000);
-
-
+  var from = new Date( $("#dtFrom").val());
+  var to = new Date( $("#dtTo").val())
+  var xMin = Math.floor(new Date(from).getTime());
+  var xMax = Math.floor(new Date(to).getTime());
 
   if($('#searchByUser').val() !== ""){
     makeUserDetails(data)
   }
 
   $.each(data, function(key, value) {   
-    var gTime = value.dt.substring(11)
+    var gTime = value.dt
     resultShow = resultShow + value.dtCount   
-    valuesErrors.push([gTime,value.errors])
-    valuesChangesCache.push([gTime,value.cRow])
-    valuesChangesQuery.push([gTime,value.qRow])
-    valuesSyncTime.push([gTime,value.dtDiffSec])
-    valuesConflicts.push([gTime,value.conflicts])
-    valuesSent.push([gTime,value.sentCount])
-    valuesChangesSent.push([gTime,value.tRow])
-    valuesSentVsChangesSent.push([gTime,value.sent/value.tRow])
-    valuesPullAttachments.push([gTime,value.pullAttCount])
-    valuesPushAttCount.push([gTime,value.pushAttCount])
-    valuesPushCount.push([gTime,value.pushCount])
+    valuesErrors.push({x:gTime,y:value.errors})
+    valuesChangesCache.push({x:gTime,y:value.cRow})
+    valuesChangesQuery.push({x:gTime,y:value.qRow})
+    valuesSyncTime.push({x:gTime,y:value.dtDiffSec})
+    valuesConflicts.push({x:gTime,y:value.conflicts})
+    valuesSent.push({x:gTime,y:value.sentCount})
+    valuesChangesSent.push({x:gTime,y:value.tRow})
+    valuesSentVsChangesSent.push({x:gTime,y:value.sent/value.tRow})
+    valuesPullAttachments.push({x:gTime,y:value.pullAttCount})
+    valuesPushAttCount.push({x:gTime,y:value.pushAttCount})
+    valuesPushCount.push({x:gTime,y:value.pushCount})
     labelsJ.push(gTime) 
   });
 
@@ -787,7 +798,6 @@ function makeChart(data){
         borderWidth: 1,
         borderColor: '#32D1C0',
         backgroundColor: '#39FEE8'
-
       },
        {
         label: 'Conflicts in Sync',
@@ -819,8 +829,7 @@ function makeChart(data){
           type: 'logarithmic'
         }, 
         x :{
-
-
+          type: 'time',
         }
       },plugins: {
      
@@ -886,7 +895,8 @@ function makeChart(data){
           stacked: true
         },
         x: {
-          stacked: true
+          stacked: true,
+          type: 'time'
         }
       }
     }
@@ -894,7 +904,7 @@ function makeChart(data){
 
 
       $('#resultSize').html(resultShow.toLocaleString());
-      //sgErrorGraph()
+      sgErrorGraph()
 
     }
 
@@ -1194,20 +1204,15 @@ function wsIdMakeHtml(data){
 function getSampleDt(){
 
   $.ajax({
-        url: "/lastWsId",
+        url: "/lastWsIdEpoch",
         type: 'GET',
         dataType: 'json', // added data type
         success: function(data) {
-          
-          if (data.length > 0){
-            const dateString = data[0]['dt'];
-            const date = new Date(dateString);
-            date.setHours(date.getHours() - 6);
 
-          $('#dtFrom').val( date.toISOString().substr(0,19));
+          if (data.length > 0){
+          $('#dtFrom').val(data[0]['dtHrAgo']);
           $('#dtTo').val(data[0]['dt']);
           sgDbListGet();
-
           }else{
             $.notify("No CBL WebSocket Connections");
           }
