closes #24 divs to table added highlights

--- a/templates/index.html
+++ b/templates/index.html
@@ -162,20 +162,17 @@
 
       </div>
       <div class="divTableCell">
-
-            <div class = "userSyncStats" id="userSyncStats"></div>
-
-            <!-- 
+           <div id="wsDetails" name="wsDetails"></div>
             <table id="userSyncStatsTable">
               <thead>
                 <tr class="text-center-row">
                   <th>Time</th>
                   <th>WebSocket Id</th>
                   <th>Connected Time(sec)</th>
-                  <th>_changes sent</th>
+                  <th>_changes Channel Cache Hit %</th>
+                  <th>_changes Sent</th>
                   <th>Docs Pulled</th>
                   <th>Docs Pushed</th>
-                  <th>_change Cache Hit %</th>
                   <th>Sync Closed(blip ended)</th>
                   <th>Conflicts</th>
                   <th>Errors</th>
@@ -184,8 +181,6 @@
               <tbody>
               </tbody>
             </table>
-            -->
-            
       </div>
   </div>
   </div>
