--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -111,3 +111,12 @@ text-align: center;
 table {
 width: 100%;
 }
+
+#userSyncStatsTable tr:nth-child(even) {
+  background-color: #d8d8fc; /* or any other light grey color */
+}
+
+#wsDetails {
+  max-height: 350px; 
+  overflow-y: auto;
+}
