css and html linting

--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -116,6 +116,10 @@ width: 100%;
   background-color: #d8d8fc; /* or any other light grey color */
 }
 
+#userSyncStatsTable tr:hover {
+  background-color: #fafab4;
+}
+
 #wsDetails {
   max-height: 350px; 
   overflow-y: auto;
