--- a/templates/index.html
+++ b/templates/index.html
@@ -166,8 +166,10 @@
             <table id="userSyncStatsTable">
               <thead>
                 <tr class="text-center-row">
+                  <th>#</th>
                   <th>Time</th>
                   <th>WebSocket Id</th>
+                  <th>New/Old Sync</th>
                   <th>Connected Time(sec)</th>
                   <th>_changes Channel Cache Hit %</th>
                   <th>_changes Sent</th>
