closes #27 chart moves in both charts

--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,23 @@
   <div class="divTableRow" >
 
       <div class="divTableCell">
-        <button style='float: right; position:relative;' class="zoomReset">Zoom Reset</button>
+
+       <b>Chart Zooming Tip:</b> <i>Hold down the Keyboard SHIFT key to draw a ZOOM to BOX on the Charts.</i> 
+        <br>
+        <br>
+       <!--
+
+    <input type="text" name="zoomTimemin" id="zoomTimeMin" style="background-color: rgb(184, 184, 184);" readonly>
+        <br>
+        <input type="text" name="zoomTimeMax" id="zoomTimeMax" style="background-color: rgb(184, 184, 184);" readonly>
+        <br>
+         <button id="changeSeachTimes" name="changeSeachTimes">Set New Search Times</button>
+        <br>
+        <br>
+        <br>
+       -->
+        <button style='float: right; position:relative;' class="zoomReset" id="zoomReset">Zoom Reset</button>
+      
       </div>
       <div class="divTableCell">
 
