--- a/templates/index.html
+++ b/templates/index.html
@@ -155,6 +155,9 @@
           
             <div id="stats">
 
+              <div id="chart7" style="display: inline-block">
+                <canvas  height="250" id="myChart7"></canvas>
+             </div>
               <div id="chart3" style="display: inline-block">
                     <canvas width="250" height="250" id="myChart3"></canvas>
               </div>
@@ -167,7 +170,6 @@
                <div id="chart6" style="display: inline-block">
                   <canvas  height="250" id="myChart6"></canvas>
                </div>
-
             </div>
 
       </div>
