added WRN and query Row counting

--- a/templates/index.html
+++ b/templates/index.html
@@ -196,6 +196,7 @@
                   <th>Docs Pushed</th>
                   <th>Sync Closed(blip ended)</th>
                   <th>Conflicts</th>
+                  <th>Warnings</th>
                   <th>Errors</th>
                 </tr>
               </thead>
